--- a/private/api2/package.json
+++ b/private/api2/package.json
@@ -26,6 +26,8 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/swagger": "^7.1.14",
     "@nestjs/typeorm": "^10.0.0",
     "config.ts": "^1.0.0",
     "dotenv": "^16.3.1",
@@ -33,6 +35,7 @@
     "mysql2": "^3.6.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
