--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "dependencies": {
     "@nestjs/swagger": "^7.1.14",
+    "@types/chance": "^1.1.6",
+    "chance": "^1.1.11",
+    "faker": "^5.5.3",
     "swagger-ui-express": "^5.0.0",
+    "typeorm-seeding": "^1.6.1",
     "yarn": "^1.22.19"
+  },
+  "name": "schoolweb",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
+    "@types/faker": "^6.6.9"
   }
 }
