stu&tec R hash seeddata

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/chance": "^1.1.6",
+    "bcryptjs": "^2.4.3",
     "chance": "^1.1.11",
     "faker": "^5.5.3",
     "swagger-ui-express": "^5.0.0",
